[package]
  name = "yuna"
  version = "0.3.0"
  edition = "2024"
  description = "Naive terminal variables manager."
  homepage = "https://sw.cowtech.it/yuna"
  repository = "https://github.com/ShogunPanda/yuna"
  license = "ISC"
  keywords = ["terminal"]
  categories = [
    "command-line-utilities",
    "command-line-interface",
    "template-engine",
  ]

[dependencies]
  anyhow = { version = "1.0.101", features = ["backtrace"] }
  clap = { version = "4.5.58", default-features = false, features = [
    "std",
    "derive",
    "error-context",
  ] }
  comfy-table = { version = "7.2.2" }
  regex = { version = "1.12.3" }
  serde = { version = "1.0.0", default-features = false, features = ["std"] }
  serde_yml = { version = "0.0.12" }
  tempera = { version = "0.3.0" }

[profile.release]
  opt-level     = 3
  lto           = "fat"
  codegen-units = 1
  panic         = "abort"
  strip         = true
